refactor: 修改全局错误处理模块
